--- a/index.html
+++ b/index.html
@@ -433,6 +433,26 @@
             </li>
           </ul>
         </div>
+        <!-- FOOTER FORM -->
+        <div class="form-wrapper">
+          <strong class="footer-form-tittle">підпишіться для розсилки</strong>
+          <form class="footer-form">
+            <label>
+              <input
+                class="footer-form-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-form-btn" type="submit">
+              <span class="tittle-form-btn">Підписатися</span>
+              <svg class="footer-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- MODAL WINDOW -->
@@ -443,6 +463,62 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <!-- MODAL FORM -->
+        <form class="modal-form">
+          <p class="modal-tittle">Залиште свої дані, ми вам передзвонимо</p>
+          <div class="form-group">
+            <label class="modal-form-label">
+              <span>Ім'я</span>
+              <input type="text" name="name" />
+              <svg class="modal-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person-black"></use>
+              </svg>
+            </label>
+          </div>
+          <div class="form-group">
+            <label class="modal-form-label">
+              <span>Телефон</span>
+              <input type="tel" name="telefone" />
+              <svg class="modal-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone-black"></use>
+              </svg>
+            </label>
+          </div>
+          <div class="form-group">
+            <label class="modal-form-label">
+              <span>Пошта</span>
+              <input type="email" name="mail" />
+              <svg class="modal-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </label>
+          </div>
+          <div class="form-group">
+            <label class="modal-form-label">
+              <span>Коментар</span>
+              <textarea
+                name="comments"
+                rows="5"
+                placeholder="Введіть текст"
+              ></textarea>
+            </label>
+          </div>
+
+          <label class="form-agreement">
+            <input
+              class="form-checkbox"
+              type="checkbox"
+              name="agreement-checkbox"
+            />
+            <span class="form-agreement-text"
+              >Погоджуюся з розсилкою та приймаю
+              <a class="form-agreement-link" href="#">Умови договору</a>
+            </span>
+          </label>
+          <button class="modal-form-btn hero-btn" type="submit">
+            Відправити
+          </button>
+        </form>
       </div>
     </div>
     <!-- СКРИПТ ДЛЯ ПІДКЛЮЧЕННЯ ЗАКРИВАННЯ І ВІДКРИВАННЯ МОДАЛЬНОГО ВІКНА -->
