--- a/portfolio.html
+++ b/portfolio.html
@@ -347,6 +347,26 @@
             </li>
           </ul>
         </div>
+        <!-- FOOTER FORM -->
+        <div class="form-wrapper">
+          <strong class="footer-form-tittle">підпишіться для розсилки</strong>
+          <form class="footer-form">
+            <label>
+              <input
+                class="footer-form-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-form-btn" type="submit">
+              <span class="tittle-form-btn">Підписатися</span>
+              <svg class="footer-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
