Виправляє помилки ДЗ№6
Виправляє верстку та стилі згідно вказівок ментора.

--- a/portfolio.html
+++ b/portfolio.html
@@ -349,7 +349,7 @@
         </div>
         <!-- FOOTER FORM -->
         <div class="form-wrapper">
-          <strong class="footer-form-tittle">підпишіться для розсилки</strong>
+          <p class="footer-form-tittle">підпишіться для розсилки</p>
           <form class="footer-form">
             <label>
               <input
